# taperecorder

./: .gitignore  AUTHORS  INSTALL  INSTALL.in  LICENSE  Makefile  autogen.sh  configure.ac  version.sh
src/: Makefile.am  commands.c  commands.h  configuration.c  configuration.h  definitions.h  main.c
